[build-system]
requires = ["setuptools", "ChimeraX-BundleBuilder"]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
name = "ChimeraX-Dicom"
license = { text = "Free for non-commercial use" }
authors = [{ name = "UCSF RBVI", email = "chimerax@cgl.ucsf.edu" }]
description = "Read medical imaging and segmentations in DICOM format"
dependencies = [
  "ChimeraX-Core ~=1.0",
  "ChimeraX-DataFormats ~=1.0",
  "ChimeraX-Geometry ~= 1.0",
  "ChimeraX-MapData ~= 2.0",
  "ChimeraX-OpenCommand ~= 1.0",
  "ChimeraX-UI >= 1.33",
]
dynamic = ["classifiers", "requires-python", "version"]

[project.optional-dependencies]
losslessjpeg = ["python-gdcm"]

[project.readme]
content-type = "text"
text = "Read medical imaging and segmentations in DICOM format."

[project.urls]
Home = "https://www.rbvi.ucsf.edu/chimerax/"

[tool.setuptools.dynamic]
version = { attr = "src.__version__" }

[tool.chimerax]
custom-init=true
min-session-version = 1
max-session-version = 1
categories = ["Medical Imaging"]
classifiers = ["Development Status :: 2 - Pre-Alpha"]

[tool.chimerax.initializations.manager]
bundles = ["ChimeraX-MedicalToolbar"]

# Don't delete just in case we do want to display these modes in the toolbar
# [chimerax.provider."create segmentations"]
# manager = "toolbar"
# tab = "Medical Image"
# section = "Mouse Mode"
# mouse-mode = "create segmentations"
# display-name = "Segment"
# description = "Create a segmentation with the mouse"
#
# [chimerax.provider."move segmentation cursor"]
# manager = "toolbar"
# tab = "Medical Image"
# section = "Mouse Mode"
# mouse-mode = "move segmentation cursor"
# display-name = "Move Segment Cursor"
# description = "Move the segmentation cursor without adding to the segmentation"
#
# [chimerax.provider."resize segmentation cursor"]
# manager = "toolbar"
# tab = "Medical Image"
# section = "Mouse Mode"
# mouse-mode = "resize segmentation cursor"
# display-name = "Resize Segment Cursor"
# description = "Resize the segmentation cursor"

[tool.chimerax.data-format."DICOM medical imaging"]
category = "Medical Imaging"
nicknames = ["dicom"]
suffixes = [".dcm"]
allow-directory = true
synopsis = "DICOM"

[[tool.chimerax.data-format."DICOM medical imaging".open]]
batch = true

[[tool.chimerax.data-format."DICOM medical imaging".open]]
type = "fetch"
name = "tcia"
format-name = "dicom"
is-default = false

[[tool.chimerax.data-format."DICOM medical imaging".save]]
compression-okay = false
is-default = true

[tool.chimerax.tool."DICOM Browser"]
category = "Medical Imaging"
description = "View the metadata of a patient's DICOM files"

[tool.chimerax.tool."Download DICOM"]
category = "Medical Imaging"
description = "View the contents of public DICOM datasets from within ChimeraX"

# TL;DR Do not modify monailabel.py to register this command
# ----
# This has to be here or else ChimeraX complains that the next three commands are
# 'incomplete', but it is not intended to be registered as the logic for that command
# would be very complex, with many arguments that would have to be listed but couldn't
# be concisely shown to be mutually exclusive (blame the CLI from the tool).
#[chimerax.command."monailabel"]
#category = "Medical Imaging"
#description = "Work with monailabel from within ChimeraX"
#
#[chimerax.command."monailabel apps"]
#category = "Medical Imaging"
#description = "Work with monailabel apps from within ChimeraX"
#
#[chimerax.command."monailabel datasets"]
#category = "Medical Imaging"
#description = "Work with monailabel apps from within ChimeraX"
#
#[chimerax.command."monailabel server"]
#category = "Medical Imaging"
#description = "Start or stop a monailabel server"
