[build-system]
requires = ["setuptools", "ChimeraX-BundleBuilder", "ChimeraX-Arrays ~=1.0"]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
name = "ChimeraX-Geometry"
license = { text = "Free for non-commercial use" }
authors = [{ name = "UCSF RBVI", email = "chimerax@cgl.ucsf.edu" }]
description = "Vector and coordinate system routines"
dependencies = ["ChimeraX-Core ~=1.0", "ChimeraX-Arrays ~=1.0"]
dynamic = ["classifiers", "requires-python", "version"]

[project.readme]
content-type = "text"
text = """Routines for vectors, rotations, coordinate transformations, bounding boxes and miscellaneous 3D scene geometry calculations."""

[project.urls]
Home = "https://www.rbvi.ucsf.edu/chimerax/"

[tool.setuptools.dynamic]
version = { attr = "src.__version__" }

[tool.chimerax]
min-session-version = 1
max-session-version = 1
categories = ["Utility"]
classifiers = ["Development Status :: 2 - Pre-Alpha"]

[tool.chimerax.extension._geometry]
sources = [
  "_geometry/bounds.cpp",
  "_geometry/closepoints.cpp",
  "_geometry/cylinderrot.cpp",
  "_geometry/distances.cpp",
  "_geometry/distancespy.cpp",
  "_geometry/fill_ring.cpp",
  "_geometry/geometry.cpp",
  "_geometry/intercept.cpp",
  "_geometry/matrix.cpp",
  "_geometry/spline.cpp",
  "_geometry/transform.cpp",
  "_geometry/vector_ops.cpp",
]
library-modules = ["chimerax.arrays"]
include-modules = ["chimerax.arrays"]
libraries = ["arrays"]
