[build-system]
requires = [
  "setuptools",
  "ChimeraX-BundleBuilder",
  "ChimeraX-Arrays ~=1.0",
  "ChimeraX-Geometry ~=1.0",
]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
name = "ChimeraX-Graphics"
license = { text = "Free for non-commercial use" }
authors = [{ name = "UCSF RBVI", email = "chimerax@cgl.ucsf.edu" }]
description = "OpenGL graphics rendering"
dependencies = [
  "ChimeraX-Core ~=1.3dev2021",
  "ChimeraX-Arrays ~=1.0",
  "ChimeraX-Geometry ~=1.0",
]
dynamic = ["classifiers", "requires-python", "version"]

[project.readme]
content-type = "text"
text = """Render scenes using a camera, view and hierarchy of drawings."""

[project.urls]
Home = "https://www.rbvi.ucsf.edu/chimerax/"

[tool.setuptools.dynamic]
version = { attr = "src.__version__" }

[tool.chimerax]
min-session-version = 1
max-session-version = 1
categories = ["Graphics"]
classifiers = ["Development Status :: 2 - Pre-Alpha"]

[tool.chimerax.package-data]
"src" = ["*Shader.txt"]

[tool.chimerax.extension._graphics]
sources = [
  "_graphics/blend_rgba.cpp",
  "_graphics/count.cpp",
  "_graphics/graphics.cpp",
  "_graphics/linux_swap_interval.cpp",
  "_graphics/mac_swap_interval.cpp",
  "_graphics/mesh_edges.cpp",
]
library-modules = ["chimerax.arrays"]
include-modules = ["chimerax.arrays"]

[tool.chimerax.extension._graphics.win32]
libraries = ["opengl32.lib"]

[tool.chimerax.extension._graphics.linux]
libraries = ["GL"]

[tool.chimerax.extension._graphics.mac]
frameworks = ["OpenGL"]
