[build-system]
requires = [
  "ChimeraX-BundleBuilder>=1.6.0",
  "ChimeraX-Arrays ~=1.0",
  "ChimeraX-Core ~=1.3dev2021",
]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
name = "ChimeraX-Graphics"
version = "1.4.1"
license = { text = "Free for non-commercial use" }
authors = [{ name = "UCSF RBVI", email = "chimerax@cgl.ucsf.edu" }]
description = "Graphics rendering"
dependencies = [
  "ChimeraX-Core ~=1.3dev2021",
  "ChimeraX-Arrays ~=1.0",
  "ChimeraX-Geometry ~=1.0",
]
dynamic = ["classifiers", "requires-python"]

[project.readme]
content-type = "text"
text = """Render scenes using a camera, view and hierarchy of drawings."""

[project.urls]
Home = "https://www.rbvi.ucsf.edu/chimerax/"

[tool.chimerax]
min-session-version = 1
max-session-version = 1
categories = ["Graphics"]
classifiers = ["Development Status :: 2 - Pre-Alpha"]

[tool.chimerax.package-data]
"src/" = ["vertexShader.txt", "fragmentShader.txt"]

#[tool.chimerax.extension._graphics]
#sources = [
#  "_graphics/blend_rgba.cpp",
#  "_graphics/count.cpp",
#  "_graphics/graphics.cpp",
#  "_graphics/linux_swap_interval.cpp",
#  "_graphics/mac_swap_interval.cpp",
#  "_graphics/mesh_edges.cpp",
#]
#libraries = ["arrays"]
#include-modules = ["chimerax.arrays", "chimerax.core"]
#library-modules = ["chimerax.arrays", "chimerax.core"]
#include-dirs = ["src/include"]
#library-dirs = ["src/lib"]
#platform.win32.libraries = ["opengl32.lib"]
#platform.mac.frameworks = ["OpenGL"]
#platform.linux.libraries = ["GL"]

[tool.chimerax.extension._vulkan]
sources = ["hello_triangle.cpp"]
include-modules = ["pybind11"]

# TODO: Make bundle builder try calling pkg-config to find libraries
platform.mac.libraries = ["vulkan"]
platform.mac.extra-compile-args = ["-std=c++17"]
platform.mac.include-dirs = ["/Users/zjp/VulkanSDK/1.3.296.0/macOS/include"]
platform.mac.library-dirs = ["/Users/zjp/VulkanSDK/1.3.296.0/macOS/lib"]

platform.win32.libraries = ["vulkan-1"]
platform.win32.extra-compile-args = ["/std:c++17"]
platform.win32.include-dirs = ["C:\\VulkanSDK\\1.4.321.1\\Include"]
platform.win32.library-dirs = ["C:\\VulkanSDK\\1.4.321.1\\Lib"]

platform.linux.libraries = ["vulkan"]
platform.linux.extra-compile-args = ["-std=c++17"]
platform.linux.include-dirs = ["/home/zjp/1.4.321.1/include"]
platform.linux.library-dirs = ["/home/zjp/1.4.321.1/lib"]
