[build-system]
requires = ["ChimeraX-BundleBuilder>=1.4.0", "ChimeraX-Core ~=1.0"]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
name = "ChimeraX-MDAnalysis"
version = "1.0.0"
license = { text = "Free for non-commercial use" }
authors = [{ name = "UCSF RBVI", email = "chimerax@cgl.ucsf.edu" }]
description = "Molecular dynamics support using MDAnalysis"
dependencies = [
  "ChimeraX-Core ~=1.0",
  "ChimeraX-Atomic ~=1.22",
  "ChimeraX-DataFormats ~=1.0",
  "ChimeraX-OpenCommand ~=1.0",
  "ChimeraX-SaveCommand ~=1.0",
  "ChimeraX-UI ~=1.47",
  "MDAnalysis>=2.0.0",
]
dynamic = ["classifiers", "requires-python"]

[project.readme]
content-type = "text"
text = """This bundle provides parsers for various molecular dynamics file formats using MDAnalysis."""

[project.urls]
Home = "https://www.rbvi.ucsf.edu/chimerax/"

[tool.chimerax]
min-session-version = 1
max-session-version = 1
module-name-override = "mdanalysis"
categories = ["Molecular Dynamics"]
classifiers = ["Development Status :: 4 - Beta"]

[tool.chimerax.manager."MD plotting"]
autostart = false

# --- Open Commands ---
[[tool.chimerax.provider."open command"]]
name = "psf"
want-path = true

[[tool.chimerax.provider."open command"]]
name = "gro"
want-path = true

[[tool.chimerax.provider."open command"]]
name = "data"
want-path = true

[[tool.chimerax.provider."open command"]]
name = "dcd"
want-path = true

[[tool.chimerax.provider."open command"]]
name = "xtc"
want-path = true

[[tool.chimerax.provider."open command"]]
name = "trr"
want-path = true

[[tool.chimerax.provider."open command"]]
name = "amber"
want-path = true

[[tool.chimerax.provider."open command"]]
name = "dump"
want-path = true

# --- Data Formats ---
[[tool.chimerax.provider."data formats"]]
name = "Protein structure file"
category = "Molecular structure"
nicknames = "psf"
suffixes = ".psf"
synopsis = "PSF topology"

[[tool.chimerax.provider."data formats"]]
name = "Gromacs structure"
category = "Molecular structure"
nicknames = "gro"
suffixes = ".gro"
synopsis = "Gromos87 structure"

[[tool.chimerax.provider."data formats"]]
name = "LAMMPS data"
category = "Molecular structure"
nicknames = "data"
suffixes = ".data"
default-for = ".data"
synopsis = "LAMMPS data format"

[[tool.chimerax.provider."data formats"]]
name = "DCD trajectory"
category = "Molecular trajectory"
nicknames = "dcd"
suffixes = ".dcd"
synopsis = "DCD trajectory"

[[tool.chimerax.provider."data formats"]]
name = "Gromacs XTC"
category = "Molecular trajectory"
nicknames = "xtc"
suffixes = ".xtc"
synopsis = "Gromacs compressed trajectory"

[[tool.chimerax.provider."data formats"]]
name = "Gromacs TRR"
category = "Molecular trajectory"
nicknames = "trr"
suffixes = ".trr"
synopsis = "Gromacs full-precision trajectory"

[[tool.chimerax.provider."data formats"]]
name = "Amber NetCDF"
category = "Molecular trajectory"
nicknames = "amber"
suffixes = ".nc"
synopsis = "Amber NetCDF trajectory"

[[tool.chimerax.provider."data formats"]]
name = "LAMMPS dump"
category = "Molecular trajectory"
nicknames = "dump"
suffixes = ".dump"
default-for = ".dump"
synopsis = "LAMMPS dump trajectory"

# --- Save Commands (Legacy support maintained) ---
[[tool.chimerax.provider."save command"]]
name = "dcd"

# --- MD Plotting ---
[[tool.chimerax.provider."MD plotting"]]
name = "distance"
num-atoms = "2"
text-format = "distance"

[[tool.chimerax.provider."MD plotting"]]
name = "angle"
num-atoms = "3"
text-format = "angle"
min-val = "0"
max-val = "180"

[[tool.chimerax.provider."MD plotting"]]
name = "torsion"
num-atoms = "4"
text-format = "angle"
min-val = "-180"
max-val = "180"

[[tool.chimerax.provider."MD plotting"]]
name = "surface"
ui-name = "SASA"
num-atoms = "0"
text-format = "%.1f"
exclude = "solution=true,ligands=true,metals=alkali"

[[tool.chimerax.provider."MD plotting"]]
name = "rmsd"
ui-name = "RMSD"
num-atoms = "0"
text-format = "%.2f"
need-ref-frame = true
exclude = "solution=true,hydrogens=true,ligands=false,metals=alkali"

[[tool.chimerax.provider."MD plotting"]]
name = "hbonds"
ui-name = "H-Bonds"
num-atoms = "0"
text-format = "%d"
