[build-system]
requires = ["setuptools", "ChimeraX-BundleBuilder"]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
name = "ChimeraX-MedicalToolbar"
license = { text = "Free for non-commercial use" }
authors= [{name = "UCSF RBVI", email="chimerax@cgl.ucsf.edu"}]
description = "Toolbar for medical image analysis"
dependencies = [
	"ChimeraX-Core ~=1.0"
	, "ChimeraX-UI ~=1.0"
]

dynamic = ["classifiers", "requires-python", "version"]

[project.readme]
content-type = "text"
text="""Provide a toolbar tab including buttons useful for medical image visualization."""

[project.urls]
Home = "https://www.rbvi.ucsf.edu/chimerax/"

[tool.setuptools.dynamic]
version = { attr = "src.__version__" }

[tool.chimerax]
min-session-version = 1
max-session-version = 1
module-name-override = "medical_toolbar"
categories = ["Toolbar"]
classifiers = ["Development Status :: 2 - Pre-Alpha"]

[tool.chimerax.package-data]
"src/icons" = ["*.png"]

# ----------------- Toolbars -----------------
[tool.chimerax.toolbar."Medical Image"]
after = "Map"
before = "Markers:Right Mouse"

[tool.chimerax.toolbar."Medical Image".sections."File"]

[[tool.chimerax.toolbar."Medical Image".sections."File".button]]
name = "open dicom"
display-name = "Open DICOM"
icon = "opendicom.png"
description = "Open DICOM directories"

[[tool.chimerax.toolbar."Medical Image".sections."File".button]]
name = "recent"
link = "ChimeraX-Toolbar:Recent"

[[tool.chimerax.toolbar."Medical Image".sections."File".button]]
name = "snapshot"
link = "ChimeraX-Shortcuts:sx"

[tool.chimerax.toolbar."Medical Image".sections."Style"]
after = "File"

[[tool.chimerax.toolbar."Medical Image".sections."Style".button]]
name="plane style"
link="ChimeraX-Shortcuts:pl"

[[tool.chimerax.toolbar."Medical Image".sections."Style".button]]
name="slab style"
link="ChimeraX-Shortcuts:is"

[[tool.chimerax.toolbar."Medical Image".sections."Style".button]]
name="orthoplanes style"
link="ChimeraX-Shortcuts:o3"

[[tool.chimerax.toolbar."Medical Image".sections."Style".button]]
name="full style"
link="ChimeraX-Shortcuts:pa"

[[tool.chimerax.toolbar."Medical Image".sections."Style".button]]
name="outline box"
link="ChimeraX-Shortcuts:ob"

[tool.chimerax.toolbar."Medical Image".sections."Color"]
after = "Style"

[[tool.chimerax.toolbar."Medical Image".sections."Color".button]]
name="airways"
link="ChimeraX-Shortcuts:aw"

[[tool.chimerax.toolbar."Medical Image".sections."Color".button]]
name="chest"
link="ChimeraX-Shortcuts:ch"

[[tool.chimerax.toolbar."Medical Image".sections."Color".button]]
name="brain"
link="ChimeraX-Shortcuts:bc"

[[tool.chimerax.toolbar."Medical Image".sections."Color".button]]
name="default thresholds"
link="ChimeraX-Shortcuts:dc"

[tool.chimerax.toolbar."Medical Image".sections."Graphics"]
after = "Color"

[[tool.chimerax.toolbar."Medical Image".sections."Graphics".button]]
name="orient"
link="ChimeraX-Shortcuts:dv"

[[tool.chimerax.toolbar."Medical Image".sections."Graphics".button]]
name="step 1"
link="ChimeraX-Shortcuts:s1"

[[tool.chimerax.toolbar."Medical Image".sections."Graphics".button]]
name="step 2"
link="ChimeraX-Shortcuts:s2"

[tool.chimerax.toolbar."Medical Image".sections."Rendering Modes"]
after = "Graphics"

[[tool.chimerax.toolbar."Medical Image".sections."Rendering Modes".button]]
name="xyz slices"
link="ChimeraX-Shortcuts:zs"

[[tool.chimerax.toolbar."Medical Image".sections."Rendering Modes".button]]
name="perpendicular slices"
link="ChimeraX-Shortcuts:ps"

[[tool.chimerax.toolbar."Medical Image".sections."Rendering Modes".button]]
name="raycasting"
link="ChimeraX-Shortcuts:rs"

[tool.chimerax.toolbar."Medical Image".sections."Mouse Mode"]
after = "Rendering Modes"
# Mouse modes -- these cannot currently be linked
[[tool.chimerax.toolbar."Medical Image".sections."Mouse Mode".button]]
name = "mm1"
mouse-mode = "crop volume"
display-name = "Crop"
description = "Crop volume data dragging any face of box outline"

[[tool.chimerax.toolbar."Medical Image".sections."Mouse Mode".button]]
name = "mm2"
mouse-mode = "move planes"
display-name = "Move planes"
description = "Move plane or slab along its axis to show a different section"

[[tool.chimerax.toolbar."Medical Image".sections."Mouse Mode".button]]
name = "mm3"
mouse-mode = "rotate slab"
display-name = "Tilt slab"
description="Tilt image planes, hold shift key to translate"

[[tool.chimerax.toolbar."Medical Image".sections."Mouse Mode".button]]
name = "mm4"
mouse-mode = "tape measure"
display-name = "Tape"
description = "Measure distance between two points"

[[tool.chimerax.toolbar."Medical Image".sections."Mouse Mode".button]]
name = "mm5"
mouse-mode = "windowing"
display-name = "Windowing"
description = "Adjust volume data thresholds collectively"
