[build-system]
requires = ["setuptools", "ChimeraX-BundleBuilder"]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
name = "ChimeraX-NRRD"
license = { text = "Free for non-commercial use" }
authors= [{name = "UCSF RBVI", email="chimerax@cgl.ucsf.edu"}]
description = "Read medical images in NRRD format"
dependencies = [
	"ChimeraX-Core ~=1.0"
	, "ChimeraX-DataFormats ~=1.0"
	, "ChimeraX-Geometry ~= 1.0"
	, "ChimeraX-MapData ~= 2.0"
	, "ChimeraX-OpenCommand ~= 1.0"
]
dynamic = ["classifiers", "requires-python", "version"]

[project.readme]
content-type = "text"
text = "Read medical imaging and segmentations in NRRD format."

[project.urls]
Home = "https://www.rbvi.ucsf.edu/chimerax/"

[tool.setuptools.dynamic]
version = { attr = "src.__version__" }

[chimerax]
min-session-version = 1
max-session-version = 1
categories = ["Volume Data"]
classifiers = ["Development Status :: 2 - Pre-Alpha"]

[chimerax.data-format."NRRD Medical Imaging"]
category = "Volume Data"
nicknames = ["nrrd"]
suffixes = [".nrrd"]
allow-directory = false
synopsis = "NRRD"
reference-url = "https://teem.sourceforge.net/nrrd/format.html"

[[chimerax.data-format."NRRD Medical Imaging".open]]
batch = false
